--- a/front/api/templates/course.html
+++ b/front/api/templates/course.html
@@ -65,6 +65,7 @@
 						<table class="responsive-table centered highlight striped">
 							<thead>
 								<tr>
+									<th data-filed="choice">选择</th>
 									<th data-field="subject">科目</th>
 									<th data-field="grade">年级</th>
 									<th data-field="term">学期</th>
