upload phone verify

--- a/front/api/templates/course.html
+++ b/front/api/templates/course.html
@@ -59,7 +59,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="col s10 container center-align">
+				<div class="col m10 s10 container center-align">
 					<div class="container center-align">
 						<h3>课程报名</h3>
 						<table class="responsive-table centered highlight striped">
