--- a/front/api/templates/index.html
+++ b/front/api/templates/index.html
@@ -29,6 +29,7 @@
 				<div class="col s4 right-align">
 					<div id="user_op">
 						<a id="register_btn" class="waves-effect waves-light btn" href="/register">注册</a>
+						<a id="register_mail_btn" class="waves-effect waves-light btn" href="/register_mail">邮箱注册</a>
 						<a id="login_btn" class="waves-effect waves-light btn" href="/login">登录</a>
 					</div>
 				</div>
